added more testing cases and code including 100 random map extents for each table that will return number of records between 9900 and 10000.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>ms-solr-api</groupId>
   <artifactId>ms-solr-api-performance</artifactId>
-  <version>0.10.15</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -79,6 +79,17 @@
     </resources>
 
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
