--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ms-solr-api</groupId>
-  <artifactId>ms-solr-api-performance</artifactId>
+  <artifactId>ms-query-api-performance</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
