--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ms-solr-api</groupId>
+  <groupId>ms-query-api</groupId>
   <artifactId>ms-query-api-performance</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
